k8s/my-tech-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytech
  namespace: npe
  labels:
    app: mytech
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mytech
  template:
    metadata:
      labels:
        app: mytech
    spec:
      containers:
        - name: mytech
          image: danielsabana/my-tech:9b6a27c4bed84de877bca39a0ca8fa8e6957301b
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 600Mi
          startupProbe:
            httpGet:
              path: /usuario
              port: 8080
            initialDelaySeconds: 9
