k8s/my-tech-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mytech
  namespace: npe
spec:
  selector:
    app: mytech
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
